--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -33,19 +33,20 @@ library
   
   ghc-options: -Wall -O2
   if impl(ghc >= 6.8)
-    ghc-options: fwarn-tabs
+    ghc-options: -fwarn-tabs
   
 
-  -- Modules included in this library but not exported.
-  -- other-modules:       
+  other-modules:
+    Network.Bitcoin.BitX.Types
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
   
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.7 && <4.8,
-                       data-lens-light == 0.1.*,
-                       aeson == 0.8.*
+  build-depends:       base >=4.5 && <5,
+                       aeson == 0.8.*,
+                       http-conduit == 2.1.*,
+                       Decimal == 0.4.*
 
   default-language:    Haskell2010
   hs-source-dirs:      src
