--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -30,14 +30,14 @@ library
     Network.Bitcoin.BitX
     Network.Bitcoin.BitX.Public
     Network.Bitcoin.BitX.Private
-  
+    Network.Bitcoin.BitX.Types
   ghc-options: -Wall -O2
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
   
 
   other-modules:
-    Network.Bitcoin.BitX.Types
+    Network.Bitcoin.BitX.Types.Internal
   
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:    
@@ -45,7 +45,12 @@ library
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.5 && <5,
                        aeson == 0.8.*,
+                       json-extra == 0.1.*,
+                       record == 0.3.*,
+                       text == 1.2.*,
+                       time == 1.4.*,
                        http-conduit == 2.1.*,
+                       bytestring == 0.10.*,
                        Decimal == 0.4.*
 
   default-language:    Haskell2010
