--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -53,7 +53,8 @@ library
                        http-conduit == 2.1.*,
                        bytestring == 0.10.*,
                        Decimal == 0.4.*,
-                       network == 2.6.*
+                       network == 2.6.*,
+                       split == 0.2.*
 
   default-language:    Haskell2010
   hs-source-dirs:      src
