--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -46,15 +46,15 @@ library
 
   -- Other library packages from which modules are imported.
   build-depends:       base >=4.5 && <5,
-                       aeson == 0.8.*,
-                       record == 0.3.*,
-                       text == 1.2.*,
-                       time == 1.4.*,
-                       http-conduit == 2.1.*,
-                       bytestring == 0.10.*,
-                       Decimal == 0.4.*,
-                       network == 2.6.*,
-                       split == 0.2.*
+                       aeson >= 0.8.0.0,
+                       record >= 0.3.0,
+                       text,
+                       time,
+                       http-conduit >= 2.0.0,
+                       bytestring >= 0.10.0.0,
+                       Decimal >= 0.3.1,
+                       network >= 2.0,
+                       split >= 0.2.0.0
 
   default-language:    Haskell2010
   hs-source-dirs:      src
