--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,15 @@
 # stolen from https://github.com/hvr/multi-ghc-travis
 
 env:
-# - CABALVER=1.16 GHCVER=7.6.1
-# - CABALVER=1.16 GHCVER=7.6.2
-# - CABALVER=1.18 GHCVER=7.6.3
-# - CABALVER=1.18 GHCVER=7.8.1
-# - CABALVER=1.18 GHCVER=7.8.2
-# - CABALVER=1.18 GHCVER=7.8.3
-# - CABALVER=1.18 GHCVER=7.8.4
- - CABALVER=1.22 GHCVER=7.10.1
- - CABALVER=head GHCVER=head
+ - CABALVER=1.16 GHCVER=7.6.1
+ - CABALVER=1.16 GHCVER=7.6.2
+ - CABALVER=1.18 GHCVER=7.6.3
+ - CABALVER=1.18 GHCVER=7.8.1
+ - CABALVER=1.18 GHCVER=7.8.2
+ - CABALVER=1.18 GHCVER=7.8.3
+ - CABALVER=1.18 GHCVER=7.8.4
+# - CABALVER=1.22 GHCVER=7.10.1
+# - CABALVER=head GHCVER=head
 
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
