--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ env:
  - CABALVER=1.18 GHCVER=7.8.2
  - CABALVER=1.18 GHCVER=7.8.3
  - CABALVER=1.18 GHCVER=7.8.4
-# - CABALVER=1.22 GHCVER=7.10.1
-# - CABALVER=head GHCVER=head
+ - CABALVER=1.22 GHCVER=7.10.1
+ - CABALVER=head GHCVER=head
 
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
  - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER # see note about happy/alex
+ - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
