--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,10 @@ env:
  - CABALVER=1.22 GHCVER=7.10.1
  - CABALVER=head GHCVER=head
 
+matrix:
+ allow_failures:
+  - env: CABALVER=head GHCVER=head
+
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
  - travis_retry sudo apt-get update
