--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -58,6 +58,15 @@ library
 
   default-language:    Haskell2010
   hs-source-dirs:      src
+
+--------------------------------------------------------------------------------
+
+source-repository head
+  type:
+    git
+  location:
+    git://github.com/tebello-thejane/bitx-haskell.git
+
 --------------------------------------------------------------------------------
 
 --test-suite main
