--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -35,15 +35,15 @@ library
     Network.Bitcoin.BitX.Types
     Network.Bitcoin.BitX.Private.Quote
     Network.Bitcoin.BitX.Private.Auth
-
+    Network.Bitcoin.BitX.Types.Internal
+    Network.Bitcoin.BitX.Internal
   ghc-options: -Wall -O2
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
 
-  other-modules:
-    Network.Bitcoin.BitX.Types.Internal
-    Network.Bitcoin.BitX.Internal
+--  other-modules:
+
 
   -- LANGUAGE extensions used by modules in this package.
   -- other-extensions:
@@ -73,10 +73,17 @@ source-repository head
 
 --------------------------------------------------------------------------------
 
---test-suite main
---  default-language: Haskell2010
-
---  hs-source-dirs: test
---  main-is: Test.hs
-
-
+test-suite spec
+  type:
+      exitcode-stdio-1.0
+  ghc-options:
+      -Wall
+  hs-source-dirs:
+      test
+  main-is:
+      Spec.hs
+  default-language:    Haskell2010
+  build-depends:       base == 4.*,
+                       bitx-bitcoin,
+                       hspec == 2.*,
+                       aeson
