--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
 matrix:
  allow_failures:
   - env: CABALVER=head GHCVER=head
+  - env: CABALVER=1.22 GHCVER=7.10.2
 
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
@@ -27,12 +28,14 @@ install:
  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
  - travis_retry cabal update
  - cabal install --only-dependencies --enable-tests --enable-benchmarks
+ - cabal install packunused
 
 script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
- - cabal configure --enable-tests --enable-benchmarks -v2
- - cabal build
+ - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
+ - cabal build --ghc-option=-ddump-minimal-imports
  - cabal test
  - cabal check
+ - packunused
  - cabal sdist
  - cabal install --force-reinstalls dist/*-*.tar.gz
