packunused requires at least happy.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ install:
  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
  - travis_retry cabal update
  - cabal install --only-dependencies --enable-tests --enable-benchmarks
+ - cabal install happy alex
  - cabal install packunused
 
 script:
