--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ script:
  - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
  - cabal --version
  - cabal build --ghc-option=-ddump-minimal-imports
+ - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
  - cabal --version
  - cabal test
  - cabal check
