--- a/.travis.yml
+++ b/.travis.yml
@@ -24,27 +24,16 @@ before_install:
  - export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
- - cabal --version
  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
  - travis_retry cabal update
- - cabal --version
  - cabal install --only-dependencies --enable-tests --enable-benchmarks
- - cabal --version
- - cabal install happy alex
- - cabal --version
- - cabal install packunused
- - cabal --version
 
 script:
- - if [ -f configure.ac ]; then autoreconf -i; fi
- - cabal --version
- - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
- - cabal --version
+# - if [ -f configure.ac ]; then autoreconf -i; fi
+# - cabal configure -O0 --disable-library-profiling -v2
  - cabal build --ghc-option=-ddump-minimal-imports
- - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
- - cabal --version
+ - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2\
  - cabal test
  - cabal check
- - packunused
  - cabal sdist
  - cabal install --force-reinstalls dist/*-*.tar.gz
