cabal-install 1.16 prefers it if you configure first before building

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,9 +30,9 @@ install:
 
 script:
 # - if [ -f configure.ac ]; then autoreconf -i; fi
-# - cabal configure -O0 --disable-library-profiling -v2
+ - cabal configure -O0 --disable-library-profiling -v2
  - cabal build --ghc-option=-ddump-minimal-imports
- - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2\
+ - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
  - cabal test
  - cabal check
  - cabal sdist
