Figuring out testing. This is gonna be a schlep.

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -86,4 +86,8 @@ test-suite spec
   build-depends:       base == 4.*,
                        bitx-bitcoin,
                        hspec == 2.*,
-                       aeson
+                       aeson,
+                       record,
+                       bytestring,
+                       time
+
