--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ script:
  - cabal configure --enable-tests -O0 --disable-library-profiling -v2
  - cabal build
  - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
- - cabal install hspec
+# - cabal install hspec
  - cabal test
  - cabal check
  - cabal sdist
