--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -45,7 +45,7 @@ library
     Network.Bitcoin.BitX.Private.Quote
     Network.Bitcoin.BitX.Private.Auth
 
---  ghc-options: -Wall -O2
+  ghc-options: -Wall
   if impl(ghc >= 6.8)
     ghc-options: -fwarn-tabs
 
