--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -44,6 +44,7 @@ library
     Network.Bitcoin.BitX.Types
     Network.Bitcoin.BitX.Private.Quote
     Network.Bitcoin.BitX.Private.Auth
+    Network.Bitcoin.BitX.Response
 
   ghc-options: -Wall
   if impl(ghc >= 6.8)
