Package should be ready for Hackage now.

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -16,6 +16,8 @@ description:
     If you need to make sure that nothing funny happens in the code, apart from reading
     the source yourself, you should also perform a few test transations with very small
     denominations, as I will strive to do every time before releasing a new version.
+    .
+    For a very small usage example, see "Network.Bitcoin.BitX.Public".
 
 license:             PublicDomain
 
