--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -71,7 +71,8 @@ library
                        bytestring >= 0.10.0.0,
                        Decimal >= 0.3.1,
                        network >= 2.0,
-                       split >= 0.2.0.0
+                       split >= 0.2.0.0,
+                       scientific
 
   default-language:    Haskell2010
   hs-source-dirs:      src
