Replace Decimal with Scientifc. This sis a major revision change. Tests will probably fail (FPC).

--- a/.project-settings.yml
+++ b/.project-settings.yml
@@ -11,9 +11,7 @@ cabal-file: project.cabal
 version: 1
 extra-packages: ! 'Hackage: base-prelude 0.1.19
 
-  Hackage: record 0.3.1.1
-
-  Hackage: Decimal 0.4.2'
+  Hackage: record 0.3.1.1'
 ghc-args: []
 excluded-modules:
 - Setup.hs
