--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
  - cabal build
  - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
 # - cabal install hspec
- - cabal test
+ - cabal test --show-details=always --test-option=--color
  - cabal check
  - cabal sdist
  - cabal install --force-reinstalls dist/*-*.tar.gz
