Second steps at adding stack to travis build.

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,17 +18,17 @@ matrix:
   - env: CABALVER=head GHCVER=head
   - env: CABALVER=1.22 GHCVER=7.10.2
 
-before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
- - export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
+#before_install:
+# - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
+# - travis_retry sudo apt-get update
+# - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+# - export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
- - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
- - travis_retry cabal update
+# - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
+# - travis_retry cabal update
 # - cabal install --only-dependencies --enable-tests --enable-benchmarks
- - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.hs; fi
+ - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
 
 script:
  - if [ -z "$STACK" ]; then .travis/scr-cabal.sh; else .travis/scr-stack.sh; fi
