--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
  - CABALVER=1.18 GHCVER=7.8.2
  - CABALVER=1.18 GHCVER=7.8.3
  - CABALVER=1.18 GHCVER=7.8.4
- - CABALVER=1.18 GHCVER=7.8.4 STACK=YES
+ - STACK=YES
  - CABALVER=1.22 GHCVER=7.10.1
  - CABALVER=1.22 GHCVER=7.10.2
  - CABALVER=head GHCVER=head
@@ -33,6 +33,7 @@ install:
  - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
 
 script:
+ - if [ -z "$STACK" ]; then export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH; fi
  - if [ -z "$STACK" ]; then .travis/scr-cabal.sh; else .travis/scr-stack.sh; fi
 # - cabal configure --enable-tests -O0 --disable-library-profiling -v2
 # - cabal build
