--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ install:
 # - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
 # - travis_retry cabal update
 # - cabal install --only-dependencies --enable-tests --enable-benchmarks
- - travis_wait if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
+ - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else travis_wait .travis/ins-stack.sh; fi
 
 script:
  - if [ -z "$STACK" ]; then export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH; fi
