--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -63,7 +63,7 @@ library
 
   build-depends:       base >=4.5 && <5,
                        aeson >= 0.8.0.0,
-                       record >= 0.3.1.1,
+                       record >= 0.3.1.1 && <0.4.0.0,
                        text,
                        time,
                        http-conduit >= 2.0.0,
