--- a/.travis.yml
+++ b/.travis.yml
@@ -33,12 +33,14 @@ install:
  - if [ -z "$STACK" ]; then travis_wait .travis/ins-cabal.sh; else travis_wait .travis/ins-stack.sh; fi
 
 script:
+ - if [ -n "$STACK" ]; then travis_wait sudo apt-get install libgmp3-dev git autoconf automake libtool make libgmp-dev ncurses-dev g++ python bzip2; fi
+ - if [ -n "$STACK" ]; then time stack build; fi
+ - if [ -n "$STACK" ]; then time stack test; fi
+ 
  - if [ -z "$STACK" ]; then export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH; fi
- - if [ -z "$STACK" ]; then travis_wait .travis/scr-cabal.sh; else travis_wait .travis/scr-stack.sh; fi
+ - if [ -z "$STACK" ]; then travis_wait .travis/scr-cabal.sh; fi
 # - cabal configure --enable-tests -O0 --disable-library-profiling -v2
 # - cabal build
 # - cabal configure --enable-tests --enable-benchmarks -O0 --disable-library-profiling -v2
 # - cabal test --show-details=always --test-option=--color
- - cabal check
- - cabal sdist
- - cabal install --force-reinstalls dist/*-*.tar.gz
+
