--- a/.travis.yml
+++ b/.travis.yml
@@ -34,8 +34,8 @@ install:
 
 script:
  - if [ -n "$STACK" ]; then travis_wait sudo apt-get install libgmp3-dev git autoconf automake libtool make libgmp-dev ncurses-dev g++ python bzip2; fi
- - if [ -n "$STACK" ]; then travis_wait time stack build; fi
- - if [ -n "$STACK" ]; then travis_wait time stack test; fi
+ - if [ -n "$STACK" ]; then travis_wait stack build; fi
+ - if [ -n "$STACK" ]; then travis_wait sttimeack test; fi
  
  - if [ -z "$STACK" ]; then export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH; fi
  - if [ -z "$STACK" ]; then travis_wait .travis/scr-cabal.sh; fi
