--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ install:
  - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
 
 script:
- - if [ -n "$STACK" ]; then sudo apt-get install libgmp3-dev git autoconf automake libtool make libgmp-dev ncurses-dev g++ python bzip2; fi
+ - if [ -n "$STACK" ]; then sudo apt-get install libgmp3-dev; fi
  - if [ -n "$STACK" ]; then .travis/stack-build.sh; fi
  - if [ -n "$STACK" ]; then stack test; fi
  
- - if [ -z "$STACK" ]; then export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH; fi
+ - export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
  - if [ -z "$STACK" ]; then .travis/scr-cabal.sh; fi
 # - cabal configure --enable-tests -O0 --disable-library-profiling -v2
 # - cabal build
