Try to see if installing all GHC deps fixes this sanity issue.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ install:
  - if [ -n "$STACK" ]; then sudo stack setup; fi
 
 script:
- - if [ -n "$STACK" ]; then sudo apt-get install libgmp3-dev; fi
+ - if [ -n "$STACK" ]; then sudo apt-get build-dep ghc; fi
  - if [ -n "$STACK" ]; then .travis/stack-build.sh; fi
  - if [ -n "$STACK" ]; then stack test; fi
  
