For some reason Cabal, at least 1.16.0 w/ GHC 7.6, does not resolve transitive record dep in test spec.

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -99,7 +99,7 @@ test-suite spec
                        bitx-bitcoin,
                        hspec == 2.*,
                        aeson,
-                       record,
+                       record == 0.3.*,
                        bytestring,
                        time
   other-modules:
