--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
   - env: CABALVER=1.22 GHCVER=7.10.2
 
 install:
+ - sudo apt-get update
  - if [ -n "$STACK" ]; then sudo apt-get build-dep ghc; fi
  - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
 
