--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ matrix:
 
 install:
  - sudo apt-get update
- - if [ -n "$STACK" ]; then sudo apt-get build-dep ghc; fi
+ - if [ -n "$STACK" ]; then sudo apt-get libgmp-dev; fi
  - if [ -z "$STACK" ]; then .travis/ins-cabal.sh; else .travis/ins-stack.sh; fi
 
 script:
