--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -70,7 +70,8 @@ library
                        bytestring >= 0.10.0.0,
                        network >= 2.0,
                        split >= 0.2.0.0,
-                       scientific
+                       scientific,
+                       lens == 4.*
 
   default-language:    Haskell2010
   hs-source-dirs:      src
