--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -71,7 +71,8 @@ library
                        network >= 2.0,
                        split >= 0.2.0.0,
                        scientific,
-                       lens == 4.*
+                       lens == 4.*,
+                       http-types
 
   default-language:    Haskell2010
   hs-source-dirs:      src
