--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -26,7 +26,7 @@ maintainer:          Tebello Thejane <zyxoas+hackage@gmail.com>
 
 category:            Web, Bitcoin, Finance
 
-build-type:          Custom
+build-type:          Simple
 
 extra-source-files:
   README.md
