--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -1,5 +1,5 @@
 name:                bitx-bitcoin
-version:             0.2.0.2
+version:             0.3.0.0
 synopsis:            A Haskell library for working with the BitX bitcoin exchange.
 
 description:
@@ -63,7 +63,6 @@ library
 
   build-depends:       base >=4.5 && <5,
                        aeson >= 0.8.0.0,
-                       record >= 0.3.1.1 && <0.4.0.0,
                        text,
                        time,
                        http-conduit >= 2.0.0,
@@ -101,9 +100,10 @@ test-suite spec
                        bitx-bitcoin,
                        hspec == 2.*,
                        aeson,
-                       record == 0.3.*,
                        bytestring,
-                       time
+                       time,
+                       mtl,
+                       lens
   other-modules:
     Network.Bitcoin.BitX.Spec.Common
     Network.Bitcoin.BitX.Spec.Specs.AesonRecordSpec
