Umm... Looks like I had broken it...

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,8 +64,7 @@ script:
       ghc --version
 
       cabal configure --enable-tests -O0 --disable-library-profiling -v2
-      cabal install --only-dependencies
-      cabal install --enable-tests
+      cabal build
       cabal test
 
       cabal check
