Must configure before tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ script:
 
       
       cabal install --only-dependencies --enable-tests
+      cabal configure --enable-tests
       cabal build
       echo -e "\033[0;32mTesting.\033[0m"
       cabal test
