--- a/.travis.yml
+++ b/.travis.yml
@@ -21,24 +21,26 @@ install:
  - sudo apt-get update
  - if [ -n "$STACK" ]; then sudo apt-get install libgmp-dev; fi
  - |
+    set -ev
     if [ -z "$STACK" ]; then
-      sudo add-apt-repository -y ppa:hvr/ghc &&
-      sudo apt-get update &&
-      time sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER &&
+      sudo add-apt-repository -y ppa:hvr/ghc 
+      sudo apt-get update 
+      time sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER 
       export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
       echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
       cabal update
 
     else
-      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add . &&
-      echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list &&
-      sudo apt-get update &&
+      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add . 
+      echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list 
+      sudo apt-get update 
       sudo apt-get install stack -y
     fi
 
 script:
  - |
+    set -ev
     if [ -n "$STACK" ]; then
       (sudo stack setup; sudo stack build) &
       pidA=$!
@@ -58,18 +60,19 @@ script:
     fi
 
  - |
+    set -ev
     if [ -z "$STACK" ]; then
       cabal --version
       ghc --version
 
-      cabal install --only-dependencies --enable-tests &&
-      cabal configure --enable-tests &&
-      cabal build &&
+      cabal install --only-dependencies --enable-tests 
+      cabal configure --enable-tests 
+      cabal build 
       echo -e "\033[0;32mTesting.\033[0m"
-      cabal test &&
+      cabal test 
 
-      cabal check &&
-      cabal sdist &&
+      cabal check 
+      cabal sdist 
       cabal install --force-reinstalls dist/*-*.tar.gz
     fi
 
