--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ script:
       ghc --version
 
       cabal install --only-dependencies --enable-tests 
-      cabal configure --enable-tests 
+      #cabal configure --enable-tests 
       cabal build 
       echo -e "\033[0;32mTesting.\033[0m"
       cabal test 
