--- a/.travis.yml
+++ b/.travis.yml
@@ -23,18 +23,18 @@ install:
  - |
     set -ev
     if [ -z "$STACK" ]; then
-      sudo add-apt-repository -y ppa:hvr/ghc 
-      sudo apt-get update 
-      time sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER 
+      sudo add-apt-repository -y ppa:hvr/ghc
+      sudo apt-get update
+      time sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
       export PATH=/home/travis/.cabal/bin:/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
       echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
       cabal update
 
     else
-      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add . 
-      echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list 
-      sudo apt-get update 
+      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add .
+      echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list
+      sudo apt-get update
       sudo apt-get install stack -y
     fi
 
@@ -65,14 +65,13 @@ script:
       cabal --version
       ghc --version
 
-      #cabal install --only-dependencies --enable-tests 
-      #cabal configure --enable-tests 
-      #cabal build 
-      echo -e "\033[0;32mTesting.\033[0m"
-      cabal test 
+      cabal install --only-dependencies --enable-tests
+      cabal configure --enable-tests
+      cabal build
+      cabal test
 
-      cabal check 
-      cabal sdist 
+      cabal check
+      cabal sdist
       cabal install --force-reinstalls dist/*-*.tar.gz
     fi
 
