Typo in .travis.yml.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
       cabal update
 
     else
-      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add .
+      wget -q -O- http://download.fpcomplete.com/ubuntu/fpco.key | sudo apt-key add -
       echo 'deb http://download.fpcomplete.com/ubuntu/precise stable main'|sudo tee /etc/apt/sources.list.d/fpco.list
       sudo apt-get update
       sudo apt-get install stack -y
