--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ install:
  - sudo apt-get update
  - if [ -n "$STACK" ]; then sudo apt-get install libgmp-dev; fi
  - |
-    set -ev
+    set -e
     if [ -z "$STACK" ]; then
       sudo add-apt-repository -y ppa:hvr/ghc
       sudo apt-get update
@@ -40,26 +40,43 @@ install:
 
 script:
  - |
-    set -ev
+    set -e
     if [ -n "$STACK" ]; then
+      echo -e "\033[0;32mstack setup.\033[0m"
       sudo stack setup -v
+
+      echo -e "\033[0;32mstack build.\033[0m"
       sudo stack build -v
+
+      echo -e "\033[0;32mstack test.\033[0m"
       sudo stack test
     fi
 
  - |
-    set -ev
+    set -e
     if [ -z "$STACK" ]; then
       cabal --version
       ghc --version
 
+      echo -e "\033[0;32mcabal install only deps.\033[0m"
       cabal install --only-dependencies --enable-tests
+
+      echo -e "\033[0;32mcabal config with tests.\033[0m"
       cabal configure --enable-tests
+
+      echo -e "\033[0;32mcabal build.\033[0m"
       cabal build
+
+      echo -e "\033[0;32mcabal test.\033[0m"
       cabal test
 
+      echo -e "\033[0;32mcabal check.\033[0m"
       cabal check
+
+      echo -e "\033[0;32mcabal sdist.\033[0m"
       cabal sdist
+
+      echo -e "\033[0;32mcabal install tarball.\033[0m"
       cabal install --force-reinstalls dist/*-*.tar.gz
     fi
 
