--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -70,7 +70,8 @@ library
                        network >= 2.0,
                        split >= 0.2.0.0,
                        scientific,
-                       lens == 4.*,
+                       microlens,
+                       microlens-th,
                        http-types
 
   default-language:    Haskell2010
@@ -103,7 +104,7 @@ test-suite spec
                        bytestring,
                        time,
                        mtl,
-                       lens
+                       microlens
   other-modules:
     Network.Bitcoin.BitX.Spec.Common
     Network.Bitcoin.BitX.Spec.Specs.AesonRecordSpec
