--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,4 @@
-resolver: nightly-2015-08-10
+resolver: lts-3.0
 flags: {}
 packages:
 - '.'
-extra-deps:
-  - microlens-0.2.0.0
-  - microlens-th-0.2.1.0
-
