Added a tested-with field to the cabal file, for shits and giggles.

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -36,6 +36,8 @@ cabal-version:       >=1.10
 
 homepage:            https://github.com/tebello-thejane/bitx-haskell
 
+tested-with:         GHC >=7.6.1 && <=7.10.2
+
 --------------------------------------------------------------------------------
 
 library
