--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -102,7 +102,8 @@ test-suite spec
                        aeson,
                        bytestring,
                        time,
-                       microlens
+                       microlens,
+                       directory
   other-modules:
     Network.Bitcoin.BitX.Spec.Common
     Network.Bitcoin.BitX.Spec.Specs.AesonRecordSpec
