--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -16,7 +16,7 @@ description:
     .
     For a very small usage example, see "Network.Bitcoin.BitX.Public".
 
-license:             PublicDomain
+license:             BSD3
 
 license-file:        LICENSE
 
