--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -65,11 +65,12 @@ library
                        aeson >= 0.8,
                        text,
                        time,
-                       http-conduit >= 2.1.7,
                        bytestring,
                        network,
                        split >= 0.2.0.0,
                        scientific,
+                       http-client >= 0.4.6.1,
+                       http-client-tls,
                        microlens,
                        microlens-th,
                        http-types
@@ -137,7 +138,7 @@ test-suite example
                        microlens,
                        bitx-bitcoin,
                        http-types,
-                       http-conduit,
+                       http-client,
                        text
   hs-source-dirs:      test
   default-language:    Haskell2010
