--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
     - env: CABALVER=head GHCVER=head
       addons: {apt: {packages: [cabal-install-head,ghc-head],  sources: [hvr-ghc]}}
     - env: STACK=STACK
+      addons: {apt: {packages: [perl,make,automake,gcc,gmp-devel]}}
 
   allow_failures:
    - env: CABALVER=head GHCVER=head
@@ -40,11 +41,11 @@ install:
     else
       curl -o stack.tar.gz -L https://www.stackage.org/stack/linux-x86_64
       mkdir ./stack
-      tar -xvf stack.tar.gz -C ./stack --strip-components=1
+      tar -xf stack.tar.gz -C ./stack --strip-components=1
       export PATH=$PATH:./stack/
 
+      echo "Stack $(stack --version)"
       stack update
-      stack upgrade
     fi
 
 script:
