tls-1.3.6 is broken on GHC 7.8.* *rolls eyes*

--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -74,7 +74,8 @@ library
                        http-client-tls,
                        microlens,
                        microlens-th,
-                       http-types
+                       http-types,
+                       tls <= 1.3.5
 
   default-language:    Haskell2010
   hs-source-dirs:      src
