--- a/bitx-bitcoin.cabal
+++ b/bitx-bitcoin.cabal
@@ -74,8 +74,7 @@ library
                        http-client-tls,
                        microlens,
                        microlens-th,
-                       http-types,
-                       tls < 1.3.6 || > 1.3.7
+                       http-types
 
   default-language:    Haskell2010
   hs-source-dirs:      src
